RESOLVED FIXED139428
Fix EFL build fix since r177001
https://bugs.webkit.org/show_bug.cgi?id=139428
Summary Fix EFL build fix since r177001
Gyuyoung Kim
Reported 2014-12-08 21:40:18 PST
EFL port has broken since r177001. Because EFL port treats build warning as error. This patch generated a below warning. ../../Source/JavaScriptCore/parser/Nodes.h:1104:11: error: direct base ‘JSC::ParserArenaFreeable’ inaccessible in ‘JSC::CommaNode’ due to ambiguity [-Werror] class CommaNode final : public ExpressionNode, public ParserArenaFreeable {
Attachments
Patch (1.35 KB, patch)
2014-12-08 21:42 PST, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2014-12-08 21:42:40 PST
Mark Lam
Comment 2 2014-12-08 21:48:43 PST
Comment on attachment 242881 [details] Patch r=me
Gyuyoung Kim
Comment 3 2014-12-08 21:52:28 PST
Comment on attachment 242881 [details] Patch Clearing flags on attachment: 242881 Committed r177010: <http://trac.webkit.org/changeset/177010>
Gyuyoung Kim
Comment 4 2014-12-08 21:52:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.