Fix EFL build fix since r177001 https://bugs.webkit.org/show_bug.cgi?id=139428

Unreviewed, EFL build fix.

Do not inherit duplicated class. ExpressionNode is already
child of ParserArenaFreeable class.

* parser/Nodes.h:

Canonical link: https://commits.webkit.org/157287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177010 268f45cc-cd09-0410-ab3c-d52691b4dbfc